<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Słówka</string>

    <string-array name="tab_titles">
        <item>Dodaj</item>
        <item>Test</item>
        <item>Statystyki</item>
    </string-array>
    <string name="add_translation">Dodaj słówko</string>
    <string name="translation_added">Dodano słówko!</string>

    <string name="title_from">Słówko</string>
    <string name="title_to">Tłumaczenie</string>
    <string name="association">Skojarzenie</string>
    <string name="pronunciation">Wymowa</string>
    <string name="start_tough_words_test">Sprawdź słówka, które słabo Ci idą</string>
    <string name="start_test">Sprawdź wszystkie słówka</string>
    <string name="start_test_word_since">Sprawdź ostatnio dodane słówka</string>
    <string name="delete_word">Usuń słówko</string>
    <string name="word_acquaintance">Znajomość</string>
    <string name="language">Język: %s</string>
    <string name="word_insertion_date">Data wstawienia:\n%s</string>

    <string name="choose_languages">Wybierz język obcy</string>
    <string name="your_language">Twój język</string>
    <string name="foreign_language">Język obcy</string>
    <string name="choose_foreign_language">Którego języka obcego chcesz się uczyć?</string>
    <string name="test_empty">Nie znaleziono żadnych słówek do testu!</string>

    <string name="start_test_words_since_title">Słówka dodane:</string>
    <string name="start_test_words_tough">Słówka dodane:</string>
    <string-array name="start_test_words_since_options">
        <item>Dzisiaj</item>
        <item>Od wczoraj</item>
        <item>W ostatnich 3 dniach</item>
        <item>W tym tygodniu</item>
        <item>W tym miesiącu</item>
        <item>W ciągu ostatnich 3 miesięcy</item>
        <item>W ciągu ostatniego półrocza</item>
        <item>W ciągu ostatniego roku</item>
    </string-array>

    <string name="stats_all_tests">Liczba podjętych testów</string>
    <string name="stats_tests_duration">Czas spędzony na testach</string>
    <string name="stats_tests_average_duration">Średni czas trwania testu</string>
    <string name="stats_tests_average_result">Średni wynik testu</string>
    <string name="stats_translation_number">Liczba wpisanych słówek</string>
    <string name="stats_responses_all">Liczba wszystkich odpowiedzi</string>
    <string name="stats_responses_wrong">Liczba błędnych odpowiedzi</string>
    <string name="stats_responses_correct">Liczba poprawnych odpowiedzi</string>
    <string name="stats_responses_skipped">Liczba pominiętych pytań</string>

    <string name="stats_show_all_words">Pokaż wszystkie słówka</string>

    <string name="word_empty_meanings">Brak znaczeń</string>
    <string name="word_title_meanings">Znaczenia</string>

    <string name="select_memory">Wybierz skojarzenie</string>

    <string name="test_ask_question">Przetłumacz słowo: </string>
    <string name="your_answer">Twoja odpowiedź</string>

    <string name="answer_tip">Podpowiedź: %s</string>
    <string name="answer_no_tip">Podpowiedź: (brak)</string>

    <string name="question_number_of_total" formatted="false">Pytanie %d/%d</string>

    <string name="answer_correct">dobrze!</string>
    <string name="answer_wrong">źle!</string>
    <string name="answer_take_next">Pomiń to pytanie</string>
    <string name="answer_do">Odpowiedz</string>

    <string name="results_title">Wyniki testu</string>
    <string name="results_questions_count">Liczba pytan</string>
    <string name="results_questions_correct">Poprawne odpowiedzi</string>
    <string name="results_questions_wrong">Niepoprawne odpowiedzi</string>
    <string name="results_questions_skipped">Pominięte pytania</string>

    <string name="quit">Koniec</string>
    <string name="empty_words_database">Brak dodanych słówek</string>

    <string name="quit_are_you_sure_title">Czy na pewno chcesz zakończyć test?</string>
    <string name="test_lost_progress">Utracisz cały postęp.</string>
    <string name="finish_test">Przejdź do wyników</string>

    <string name="refresh">Odśwież</string>
    <string name="settings">Ustawienia</string>
    <string name="reset">Reset</string>
    <string name="delete_are_you_sure">Czy na pewno chcesz usunąć wszystkie dane? Wszystkie Twoje tłumaczenia i statysyki zostaną usunięte.</string>
    <string name="delete_all">Usuń wszystkie dane</string>
    <string name="delete_word_are_you_sure">Czy na pewno chcesz usunąć to słówko?</string>

    <string name="words_top">Najlepiej znane</string>
    <string name="words_worst">Najsłabiej znane</string>
    <string name="words_rankings">Rankingi słówek</string>
    <string name="add">Dodaj</string>

    <string name="export_words">Eksport słówek</string>
    <string name="import_words">Import słówek</string>

    <string name="choose_import_file">Wybierz plik ze słówkami</string>
    <string name="files">Pliki</string>

    <string name="error_while_reading_file">Błąd odczytu pliku.</string>
    <string name="error_translations_not_found">W pliku nie znaleziono żadnych tłumaczeń. \n Czy na pewno jest w odpowiednim formacie?</string>

    <string name="import_description"><b>Wybierz plik .txt w formacie: </b>\n
        słówko;tłumaczenie w języku obcym;skojarzenie \n
        (skojarzenie jest opcjonalne)
        \n <b>Przykład: </b>\n
        dom;house \n
        chłopiec;boy;moje skojarzenie \n
        ...
    </string>

    <plurals name="import_parsed_n_translations">
        <item quantity="one">Odczytano jedno tłumaczenie.</item>
        <item quantity="other">Odczytano %d tłumaczeń.</item>
    </plurals>

    <string name="import_failed">Import zakończony błędem.</string>

    <string name="import_start_adding_to_db">Rozpoczęto dodawanie słówek...</string>
    <string name="import_adding_translation" formatted="false">Dodawanie: %s (%s)</string>
    <string name="import_adding_to_db_finished">Dodawanie słówek zakończone</string>

    <string name="export_description">
        <b>Eksport do pliku txt: </b>\n
        słówko;tłumaczenie w języku obcym;skojarzenie \n
        (skojarzenie jest opcjonalne)
    </string>

    <string name="export_start">Rozpocznij eksport słówek</string>

    <string name="export_failed">Błąd podczas eksportowania słówek. Spróbuj ponownie. </string>
    <string name="export_succedd">Eksport zakończony. \n Zapisano słówko w pliku o ścieżce: %s </string>
    <string name="send">Wyślij</string>

    <string name="about_text">W przypadku jakichkolwiek pytań, opinii bądź wątpliwości proszę skontaktować się mailowo: \n
            <a href="mailto:wordzapp@gmail.com">wordzapp@gmail.com</a>
    </string>

    <string name="support">Wspomóż</string>
    <string name="about">O aplikacji</string>
    <string name="click_on_ad_please">Naciśnij na reklamę, proszę :)</string>

    <string name="next">Dalej</string>
    <string name="version">Wersja : %s</string>
    <string name="error_not_local_file">Ten plik musi znajdować się na Twoim telefonie.</string>

    <string name="accept_answer">Zalicz odpowiedź</string>
    <string name="accept_answer_add_meaning">Zalicz odpowiedź i dodaj to znaczenie</string>
    <string name="answers">Odpowiedzi</string>

    <string name="add_meaning">Dodaj znaczenie</string>
    <string name="remove_meaning">Usuń znaczenie</string>
    <string name="press_longer_to_delete_meaning">Przytrzymaj dłużej wybrane znaczenie aby je usunąć</string>
    <string name="delete_meaning_are_you_sure">Czy na pewno chcesz usunąć to znaczenie?</string>
    <string name="delete_meaning">Usuń znaczenie</string>

</resources>
