<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pz.vocabulary.app.MainActivity" >
    
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item android:id="@+id/action_import"
        android:title="@string/import_words"
        app:showAsAction="never" />

    <item android:id="@+id/action_export"
        android:title="@string/export_words"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item android:id="@+id/action_support"
        android:title="@string/support"
        app:showAsAction="never"> </item>
</menu>
