<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="@dimen/base_padding"
    android:paddingRight="@dimen/base_padding"
    android:paddingBottom="@dimen/base_padding"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textViewQuestion"
        style="@style/TextViewTitle"
        android:text="TEST"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/editTextAnswer"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:hint="@string/your_answer"
        android:layout_marginTop="@dimen/base_padding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTip"
        android:layout_marginLeft="10dp"
        android:drawableLeft="@drawable/hint"
        android:gravity="center_vertical"
        android:drawablePadding="5dp"
        android:text="@string/answer_no_tip"
        android:layout_marginTop="@dimen/base_padding" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_do"
        android:enabled="false"
        android:id="@+id/buttonAnswer"
        android:layout_weight="0.10"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_take_next"
        android:id="@+id/buttonTakeNext"
        android:layout_gravity="center_horizontal" />
</LinearLayout>