<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:visibility="gone"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_title_meanings"
        android:id="@+id/textView"
        android:textSize="@dimen/base_font_size"
        style="@style/TextViewTitle"
        android:layout_gravity="center_horizontal" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/listView"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept_answer"
        android:id="@+id/acceptAnswerButton"
        android:layout_marginTop="@dimen/base_padding"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept_answer_add_meaning"
        android:id="@+id/acceptAnswerAddMeaningButton"
        android:layout_marginTop="@dimen/base_padding"
        android:layout_gravity="center_horizontal" />
</LinearLayout>