<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/base_padding"
    >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_test"
        android:id="@+id/buttonStartTest"
        android:layout_marginBottom="@dimen/base_padding"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_test_word_since"
        android:layout_marginBottom="@dimen/base_padding"
        android:id="@+id/buttonStartTestWordSince"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_tough_words_test"
        android:id="@+id/buttonStartTestToughWords"
        android:layout_gravity="center_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></View>
    <com.google.android.gms.ads.AdView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        ads:adUnitId="@string/ad_unit_start_test"
        ads:adSize="BANNER"
        android:id="@+id/adView"
        android:layout_gravity="center_horizontal" />


</LinearLayout>